Fix a problem with "staffid". Refactoring by checkstyle