@@ -32,7 +32,7 @@ public class GetApplicationTest {
     @Test(priority = 1)
     public void checkApplicationData() throws SQLException {
         ApplicationData applicationData = new GetApplication()
-                .getResponse().data().get(0);
+                .getResponse().data().getFirst();
 
         ApplicationData expectedApplicationData = DataBaseConnection.getApplicationData(applicationData.applicationId());
 
@@ -40,8 +40,10 @@ public class GetApplicationTest {
         softAssert.assertEquals(applicationData.citizenId(), expectedApplicationData.citizenId(), "Field 'citizenId' isn't equaled");
         softAssert.assertEquals(applicationData.applicantId(), expectedApplicationData.applicantId(), "Field 'applicantId' isn't equaled");
         softAssert.assertEquals(applicationData.staffId(), expectedApplicationData.staffId(), "Field 'staffId' isn't equaled");
-        softAssert.assertEquals(applicationData.kindOfApplication(), expectedApplicationData.kindOfApplication(), "Field 'kindOfApplication' isn't equaled");
-        softAssert.assertEquals(applicationData.statusOfApplication(), expectedApplicationData.statusOfApplication(), "Field 'statusOfApplication' isn't equaled");
+        softAssert.assertEquals(applicationData.kindOfApplication(), expectedApplicationData.kindOfApplication(),
+                "Field 'kindOfApplication' isn't equaled");
+        softAssert.assertEquals(applicationData.statusOfApplication(), expectedApplicationData.statusOfApplication(),
+                "Field 'statusOfApplication' isn't equaled");
         softAssert.assertEquals(applicationData.channel(), expectedApplicationData.channel(), "Field 'channel' isn't equaled");
         softAssert.assertAll();
     }
